# AtlasWerks

./: BuildAtlasWerks.sh  CMakeLists.txt  Changelog.txt  Copyright.txt  InstallPythonModule.sh  README.md
Code/Applications/: CMakeLists.txt  DoxyApplications.h
Code/Applications/Affine/: Affine.cxx  Affine.h  CMakeLists.txt  main.cxx
Code/Applications/AffineAtlas/: AffineAtlas.cxx  AffineAtlas.h  AffineAtlasBuilderCPU.cxx  AffineAtlasBuilderCPU.h  AffineAtlasBuilderInterface.h  AffineAtlasClusterMain.cxx  AffineAtlasMain.cxx  CMakeLists.txt  EstimateAffineAtlas.cxx  EstimateAffineAtlas.h
Code/Applications/AtlasWerks/: AtlasWerksMain.cxx  CMakeLists.txt  GreedyAtlasBuilderCPU.cxx  GreedyAtlasBuilderCPU.h  GreedyAtlasBuilderGPU.cxx  GreedyAtlasBuilderGPU.h  GreedyAtlasBuilderGPU_NullImpl.cxx  GreedyAtlasBuilderInterface.h  GreedyAtlasBuilderSingleGPUThread.cxx  GreedyAtlasBuilderSingleGPUThread.h  GreedyAtlasBuilderSingleGPUThread_NullImpl.cxx  GreedyAtlasScaleLevelParam.h  GreedyExecutionFFT.cu  GreedyExecutionFFT.h
Code/Applications/Greedy/: CMakeLists.txt  GreedyAtlasMain.cxx  GreedyWarpMain.cxx
Code/Applications/ImMap/: BYUTable.cxx  BYUTable.h  CMakeLists.txt  DicomLoaderWindowClass.h  DicomPreview.cxx  DicomPreview.h  DicomWindowClass.h  HistogramDat.cxx  HistogramDat.h  HistogramWin.cxx  HistogramWin.h  IView.h  ImAna.cxx  ImAna.h  ImMap.cxx  ImMap.h  ImMapGUI.fl  ImMapGUI.txt  SurfaceViewWindow.cxx  SurfaceViewWindow.h  TODO.txt  Window2D.cxx  Window2D.h  WindowCS.cxx  WindowCS.h  keygen.cxx  main.cxx
Code/Applications/ImageConvert/: CMakeLists.txt  ImageConvert.cxx
Code/Applications/LDMM/: AlphaFromVelocitiesMain.cxx  CMakeLists.txt  LDMMAtlasMain.cxx  LDMMAtlasOld.cxx  LDMMMultiWarpMain.cxx  LDMMVelocityUtilsMain.cxx  LDMMWarpMain.cxx  LDMMWarpOld.cxx
Code/Applications/Utilities/: AlignCentroids.cxx  CMakeLists.txt  DiffOperMain.cxx  DownsampleImageMain.cxx  ExtractROIMain.cxx  ForwardSolveMain.cxx  ImagePreprocessingMain.cxx  ImageReadSliceWriteMain.cxx  IntensityAverage.cxx  PrintImageInfoMain.cxx  TestResampleMain.cxx  Threshold.cxx  VecUtilsMain.cxx
Code/Applications/VectorAtlasWerks/: CMakeLists.txt  main.cxx  maketestvecimages.cxx  vectorDownsample.cxx  vectorDownsample.h  vectorITKConversions.cxx  vectorITKConversions.h
Code/Applications/fGrowth/: CMakeLists.txt  PrepCINEforRecon.py  binslices.cxx  main.cxx  mkdemodata.cxx  mksimpledemodata.cxx  mksimpledemowithvel.cxx  partialapply.cxx  spacetimect.cxx
Code/Applications/fWarp/: CMakeLists.txt  main.cxx
Code/Applications/txApply/: CMakeLists.txt  txApplyMain.cxx
Code/Applications/txWerks/: CMakeLists.txt  txWerksMain.cxx
Code/Libraries/Algorithms/: Algorithms.i  AtlasBuilder.cxx  AtlasBuilder.h  CMakeLists.txt  DiffeoImageGrowth.cxx  DiffeoImageGrowth.h  FluidWarp.cxx  FluidWarp.h  FluidWarpParameters.cxx  FluidWarpParameters.h  ForwardSolve.cxx  ForwardSolve.h  VectorAtlasBuilder.cxx  VectorAtlasBuilder.h
Code/Libraries/Base/: ApplicationUtils.cxx  ApplicationUtils.h  ApplicationUtils.txx  AtlasWerksDebug.cxx  AtlasWerksDebug.h  AtlasWerksException.h  AtlasWerksTypes.h  Base.i  CMakeLists.txt  CUDAUtilities.cxx  CUDAUtilities.h  CmdLineParser.cxx  CmdLineParser.h  Complex.cxx  CompoundParam.h  ImagePreprocessor.cxx  ImagePreprocessor.h  IterData.h  MultiParam.h  ParamBase.h  ParamConstraint.h  ParamException.h  StringUtils.cxx  StringUtils.h  Timer.cxx  Timer.h  ValueParam.h  WeightedImageSet.cxx  WeightedImageSet.h  XORParam.h  barriers.h  log.h
Code/Libraries/DataTypes/: AffineTransform3D.h  AffineTransform3D.txx  Anastruct.cxx  Anastruct.h  Array2D.h  Array2D.txx  Array3D.h  Array3D.txx  BidiVaryingVectorField.h  CMakeLists.txt  Color.cxx  Color.h  Contour.cxx  Contour.h  DataTypes.i  Image.h  Image.txx  Image2D.h  Image2D.txx  JointlyVaryingVectorFields.cxx  JointlyVaryingVectorFields.h  Line3D.cxx  Line3D.h  Matrix3D.h  Matrix3D.txx  ROI.h  ROI.txx  Surface.cxx  Surface.h  Surface.inl  VaryingVectorField.h  Vector2D.h  Vector2D.txx  Vector3D.h  Vector3D.txx  VectorField.cxx  VectorField.h
Code/Libraries/UtilitiesDataTypes/: AnastructUtils.cxx  AnastructUtils.h  Array3DIO.h  Array3DToyImages.h  Array3DUtils.h  Array3DUtils.txx  CMakeLists.txt  HField3DIO.h  HField3DUtils.h  HField3DUtils.txx  ImageUtils.h  ImageUtils.txx  Matrix3DUtils.h  ROIUtils.h  SurfaceUtils.cxx  SurfaceUtils.h  SurfaceUtilsVtk.cxx  SurfaceUtilsVtk.h  UtilitiesDataTypes.i  VtkUtils.cxx  VtkUtils.h
Testing/Libraries/Algorithms/: CMakeLists.txt  DiffOperRoutineTests.cxx  FluidWarpRoutineTests.cxx  LDMMIteratorTest.cxx  MassConservationTest.cxx  (+2 more)
Testing/TestUtilities/: AtlasWerksTestUtils.py  CMakeLists.txt  GenDiffMain.cxx  TestFuncs.cxx
Utilities/DownsampleFilter/: CMakeLists.txt  DownsampleFilter2D.cxx  DownsampleFilter2D.h  DownsampleFilter3D.cxx  DownsampleFilter3D.h  DownsizeFilter2D.cxx  DownsizeFilter2D.h  DownsizeFilter3D.cxx  DownsizeFilter3D.h  GaussianFilter2D.cxx  GaussianFilter2D.h  GaussianFilter3D.cxx  GaussianFilter3D.h
Utilities/ImMapAttic/: BasicException.cxx  BasicException.h  BasicFileParser.cxx  BasicFileParser.h  BinaryIO.cxx  BinaryIO.h  CMakeLists.txt  Debugging.cxx  Debugging.h  Fl_VTK_Window.H  Fl_VTK_Window.cxx  MultiScaleFluidWarp.cxx  MultiScaleFluidWarp.h  vtkFLTKConfigure.h  vtkFLTKObjectFactory.cxx  vtkFLTKObjectFactory.h  vtkFLTKOpenGLRenderWindow.cxx  vtkFLTKOpenGLRenderWindow.h  vtkFLTKRenderWindowInteractor.cxx  vtkFLTKRenderWindowInteractor.h
Utilities/planio/: CMakeLists.txt  Makefile  brachy.h  brachy_ipc.h  brachy_math.h  extbm.h  gen.h  get_filter.cxx  get_lantis_data.cxx  get_phys_dat_dir.cxx  get_plunc_root_dir.cxx  get_slice.cxx  get_time_calc.cxx  get_tray.cxx  get_unit.cxx  getopt.cxx  getopt.h  libplan.h  libplanio.h  plan_config.h  plan_file_io.h  plan_im.h  plan_strings.h  plan_sys.h  plan_xdr.h  plan_xdr_defs.cxx  read_2d_grid.cxx  read_anastruct.cxx  read_beam.cxx  read_byte.cxx  read_contour.cxx  read_filter.cxx  read_grid.cxx  read_image_header.cxx  read_implant_desc.cxx  read_many.cxx  read_map.cxx  read_norm.cxx  read_object.cxx  read_objects.cxx  (+21 more)
(+646 files in other folders)
